Converted registration pug page to use bootstrap. Modified spacing issue on login/registration.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 /* HTML tags */
 html, body {
   height: 100%;
+  margin: 0;
 }
 
 a {
@@ -58,8 +59,8 @@ a {
 
 /* HELPER CLASSES */
 
-.top-buffer {
-  margin-top: 50px;
+.bottom-buffer {
+  margin-bottom: 25px;
 }
 
 .background-login-form {
@@ -68,10 +69,10 @@ a {
 }
 
 .background-green {
-  height:100%;
+  height: 100%;
   background-image: url("../img/bg.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% auto;
 }
 
 #card1{
@@ -471,10 +472,10 @@ p {font-size: 16px;}
     border: 0;
     border-radius: 0;
     margin-bottom: 0;
-    font-size: 12px;
+    font-size: 16px;
     letter-spacing: 2px;
 }
 
 #menu{
-    color: #1abc9c !important;
+  color: #1abc9c !important;
 }
